fix: gate run's auto-- and help's curation on verified provenance
Team review of the three prior commits found two release-blocking gaps,
both the same root cause: layout-sniffing was standing in for
provenance. format(help) == "scopt-v1" proves this text renders like
scopt; it proves nothing about which compiler produced it, and any fork
can reproduce the layout exactly while giving --entrypoint or --threads
(or run's own "no bare file arguments" behaviour) a completely different
meaning. autoRunBoundary carried no gate at all -- it applied to any
pinned compiler unconditionally, including a fork whose run may
legitimately define its own positional operand.

Added isUpstream(lock, override): true only when the lock's recorded
repository is flix/flix (or unset, the default) and no FLIX_JAR override
is in effect -- an override is announced as unverified and is explicitly
not stock-compatibility evidence, so it is excluded unconditionally.
Threaded into stage 0's own "run" dispatch, into examples' argv protocol
(a new <upstream> segment) for its own "run" auto--, and into help's
context file for option curation, which now requires format(help) ==
"scopt-v1" AND isUpstream together -- neither alone was sufficient.

Two more real bugs the same review found:

- verbValueTaking replaced the flat top-level value-taking set with the
  per-verb one whenever they differed, instead of adding to it. A real
  subcommand screen that documents only its own flags and leaves an
  inherited global one to the top level (exactly what flix/flix's own
  layout does with --entrypoint) would then lose that global flag
  entirely -- `examples run --global VALUE <name>` would mistake VALUE
  for <name>. Now unions both sets.
- probe() launched the per-verb --help subprocess with a bare `java -jar`,
  never the validated FLIX_JVM_OPTS the real launch gets. A fork needing
  one just to start would fail to probe for a reason unrelated to
  per-command help, and silently fall back to the flat se